# AI_Summer_School

./: .env.example  .gitignore  README.md
Lab/ms_code_lab_day_1_4/: pyproject.toml
Lab/ms_code_lab_day_1_4/backend/: app.py
Lab/ms_code_lab_day_1_4/backend/routers/day1/: router.py
Lab/ms_code_lab_day_1_4/backend/routers/day2/: router.py  solutions.md
Lab/ms_code_lab_day_1_4/backend/routers/day3/: database.py
Lab/ms_code_lab_day_1_4/backend/routers/day4/: router.py
Lab/ms_code_lab_day_1_4/ui/: utils.py
Lab/ms_code_lab_day_1_4/ui/pages/: 2_Day_2.py
Lab/original_code_lab_day_1_4/: pyproject.toml
Lab/original_code_lab_day_1_4/backend/routers/day3/: README_DAY_3.md
Lab/original_code_lab_day_1_4/backend/routers/day4/: README_DAY_4.md  test_evaluate.py
Lab/original_code_lab_day_5/: README.md
Lab/original_code_lab_day_5/backend/routers/day4/: test_data_sample.json
Lab/original_code_lab_day_5/ui/pages/: 1_Day_1.py
backend/: app.py  models.py
ms_code_lab_day_1_4/backend/: models.py
ms_code_lab_day_1_4/backend/routers/day1/: README_DAY_1.md
ms_code_lab_day_1_4/backend/routers/day3/: router.py
ms_code_lab_day_1_4/backend/routers/day4/: evaluate.py
ms_code_lab_day_1_4/ui/: Home.py  README.md
ms_code_lab_day_1_4/ui/pages/: 1_Day_1.py
ms_wg_yc_Multi_Agent_System_Project/01_Versuch_niO/: .env.example  Meeting_with_AI_team.ics  README.md  pyproject.toml
ms_wg_yc_Multi_Agent_System_Project/01_Versuch_niO/examples/: sample_requests.txt
ms_wg_yc_Multi_Agent_System_Project/01_Versuch_niO/src/: main.py
ms_wg_yc_Multi_Agent_System_Project/01_Versuch_niO/src/agents/: clarification_agent.py  product_agent.py  requirements_agent.py  technical_agent.py  testing_agent.py
ms_wg_yc_Multi_Agent_System_Project/01_Versuch_niO/src/llm/: __init__.py  openrouter.py
ms_wg_yc_Multi_Agent_System_Project/01_Versuch_niO/src/utils/: file_utils.py  logging.py  tools.py
ms_wg_yc_Multi_Agent_System_Project/01_Versuch_niO/src/workflows/: example_workflow.py  state.py
ms_wg_yc_Multi_Agent_System_Project/01_Versuch_niO/tests/: __init__.py  test_main.py  test_workflow.py
ms_wg_yc_Multi_Agent_System_Project/hochschul-helper-summerschool-2025/: .env.example  .gitignore  README.md  chainlit.md  chainlit.toml  pyproject.toml
ms_wg_yc_Multi_Agent_System_Project/hochschul-helper-summerschool-2025/scripts/: ingest_data.py  ingest_timetables.py  time_table_crawler.py
ms_wg_yc_Multi_Agent_System_Project/hochschul-helper-summerschool-2025/src/: agent.py  app.py  models.py  router.py
ms_wg_yc_Multi_Agent_System_Project/hochschul-helper-summerschool-2025/src/tools/: google_calendar_tool.py  ics_calendar_tool.py  ingest.py  rag.py  rag_calender.py  search.py
ms_wg_yc_Multi_Agent_System_Project/hochschul-helper-summerschool-2025/src/utils/: google_calendar_utils.py
original_code_lab_day_1_4/: .env.example
original_code_lab_day_1_4/backend/routers/day4/: models.py
original_code_lab_day_1_4/ui/pages/: 2_Day_2.py  3_Day_3.py  4_Day_4.py
original_code_lab_day_5/: main.py
original_code_lab_day_5/backend/routers/day1/: router.py
original_code_lab_day_5/backend/routers/day2/: README_DAY_2.md  router.py
original_code_lab_day_5/backend/routers/day3/: router.py
original_code_lab_day_5/data/: evaluation_data.json  test_data.json
ui/: Home.py  utils.py
